--- a/package.json
+++ b/package.json
@@ -8,19 +8,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^33.0.0",
-    "immutable": "^4.0.0-rc.12",
+    "axios": "^0.19.0",
+    "dadata-suggestions": "1.1.1",
+    "expo": "33.0.0",
+    "immutable": "4.0.0-rc.12",
+    "lodash": "^4.17.15",
     "react": "16.8.3",
-    "react-dom": "^16.8.6",
+    "react-dom": "16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.1",
-    "react-redux": "^7.1.0",
-    "redux": "^4.0.4",
-    "redux-saga": "^1.0.5"
+    "react-native-datepicker": "1.7.2",
+    "react-native-modal-selector": "1.0.3",
+    "react-native-searchable-dropdown": "^1.1.1",
+    "react-native-textinput-effects": "0.5.1",
+    "react-native-web": "0.11.4",
+    "react-navigation": "3.11.1",
+    "react-redux": "7.1.0",
+    "redux": "4.0.4",
+    "redux-devtools-extension": "2.13.8",
+    "redux-saga": "1.0.5"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
+    "babel-preset-expo": "5.1.1"
   },
   "private": true
 }
